# cross-contract-calls

./: CONTRIBUTING.md  Cargo.toml  README.md  build.rs
contract-a/: Cargo.toml
contract-b/: Cargo.toml
contract-c/: Cargo.toml
src/: contract_a.rs  contract_b.rs  contract_c.rs  main.rs
