[package]
name = "cross-contract-calls"
description = "A demonstration of cross-contract invocations in WebAssembly"
version = "0.1.0"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
repository = "https://github.com/kobby-pentangeli/wysiwyg"
readme = "README.md"
license = "MIT or APACHE-2.0"
edition = "2021"

[dependencies]
wasmer = "4.1.1"
